snapshots/care/data4life/hc-util-sdk-kmp/error/1.13.0-SNAPSHOT/error-1.13.0-20220817.141111-2.jar.sha256
5751905e9579c0d1565625690e647526717adbd9f1d25269330c767ff3a08e8c